--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_background_service: ^5.0.5
+  flutter_local_notifications: ^16.3.2
+  device_info_plus: ^9.1.2
+  shared_preferences: ^2.2.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
